Bux fix in the function to add breakers for line objects. New functionality to add breakers for synchronous machines.